--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,6 +9,7 @@
 @import "compass/css3";
 @import "layout";
 @import "forms";
+@import "account/profile";
 
 .social-media {
   border-top: 1px solid #ddd;
@@ -17,147 +18,5 @@
   a {
     display: inline-block;
     margin-left: 10px;
-  }
-}
-
-.profile {
-  .edit-profile {
-    float: left;
-    clear: both;
-    margin-top: 10px;
-  }
-
-  .blank {
-    color: #aaa;
-  }
-
-  .avatar {
-    float: left;
-    width: 100px;
-    margin: 0 20px;
-  }
-
-  .details {
-    float: left;
-    width: 200px;
-    margin: 0 20px;
-  }
-
-  .about {
-    float: right;
-    width: 400px;
-    margin: 0 20px;
-    padding: 20px 20px;
-    background: #D9EDF7;
-    @include border-radius(5px);
-
-    a.edit {
-      float: right;
-      margin: -15px -15px 0 0;
-    }
-  }
-
-  #pictures {
-    .header {
-      display: block;
-      width: 100%;
-      padding: 0;
-      margin-bottom: $baseLineHeight * 1.5;
-      font-size: $baseFontSize * 1.5;
-      line-height: $baseLineHeight * 2;
-      color: $grayDark;
-      border: 0;
-
-      a {
-        float: right;
-      }
-    }
-
-    .upload {
-      .drop-zone {
-        height: 210px;
-        border: 5px #aaa dashed;
-        text-align: center;
-        line-height: 200px;
-        font-size: 30px;
-      }
-
-      input.hidden-file-upload {
-        width: 100%;
-        height: 210px;
-        margin-top: -250px;
-        cursor: pointer;
-        @include opacity(0);
-        outline: none;
-      }
-    }
-
-    .picture {
-      padding: 10px 0;
-      border-top: 1px solid #e5e5e5;
-      @include clearfix();
-
-      &:hover {
-        background: #eee;
-        cursor: pointer;
-      }
-
-      .actions {
-        float: left;
-        clear: both;
-        margin: 10px 20px 0;
-
-        a {
-          margin-right: 10px;
-        }
-      }
-
-      .image {
-        float:left;
-        margin: 0 20px;
-      }
-
-      .details {
-        float:left;
-        width: 500px;
-        margin: 0 20px;
-      }
-    }
-
-    .picture-form {
-      background: #eee;
-
-      .form {
-        padding: 0 20px;
-      }
-    }
-
-    .picture-details {
-      padding: 10px 0;
-      border-top: 1px solid #e5e5e5;
-      background: #eee;
-      @include clearfix();
-
-      .actions {
-        float: left;
-        clear: both;
-        margin: 10px 20px 0;
-
-        a {
-          margin-right: 10px;
-        }
-      }
-
-      .image {
-        float:left;
-        margin: 0 20px;
-      }
-
-      .details {
-        float:left;
-        width: 500px;
-        margin: 0 20px;
-      }
-    }
   }
 }
